# jak-project

./: CMakeLists.txt
game/: CMakeLists.txt  main.cpp  runtime.cpp
game/assets/jak1/text/: game_text_en.gs
game/common/: dgo_rpc_types.h  loader_rpc_types.h  play_rpc_types.h  player_rpc_types.h  ramdisk_rpc_types.h  str_rpc_types.h
game/graphics/: display.cpp  display.h  gfx.cpp  gfx.h
game/graphics/general_renderer/: BucketRenderer.cpp  BucketRenderer.h  DepthCue.cpp  DepthCue.h  DirectRenderer.cpp  DirectRenderer.h  DirectRenderer2.cpp  DirectRenderer2.h  EyeRenderer.cpp  EyeRenderer.h  LightningRenderer.cpp  LightningRenderer.h  Profiler.h  ShaderCommon.h  ShadowRenderer.cpp  ShadowRenderer.h  Shadow_PS2.cpp  SkyBlendCPU.cpp  SkyBlendCPU.h  SkyBlendGPU.cpp  SkyBlendGPU.h  SkyRenderer.cpp  SkyRenderer.h  Sprite3.cpp  Sprite3.h  SpriteRenderer.cpp  SpriteRenderer.h  TextureAnimator.cpp  TextureAnimator.h  TextureUploadHandler.cpp  TextureUploadHandler.h  VisDataHandler.cpp  VisDataHandler.h  Warp.cpp  Warp.h  collision_common.h  debug_gui.cpp  debug_gui.h  sprite_common.cpp  sprite_common.h
game/graphics/general_renderer/background/: Shrub.cpp  Shrub.h  TFragment.cpp  TFragment.h  Tfrag3.cpp  Tfrag3.h  Tie3.cpp  Tie3.h  background_common.cpp  background_common.h
game/graphics/general_renderer/foreground/: Generic2.cpp  Generic2.h  Generic2BucketRenderer.cpp  Generic2BucketRenderer.h  Generic2_Build.cpp  Generic2_DMA.cpp  Merc2.cpp  Merc2.h  Merc2BucketRenderer.cpp  Merc2BucketRenderer.h  Shadow2.cpp  Shadow2.h
game/graphics/general_renderer/loader/: Loader.h  LoaderStages.h  common.h
game/graphics/general_renderer/ocean/: CommonOceanRenderer.cpp  CommonOceanRenderer.h  OceanMid.cpp  OceanMid.h  OceanMidAndFar.cpp  OceanMidAndFar.h  OceanMid_PS2.cpp  OceanNear.cpp  OceanNear.h  OceanNear_PS2.cpp  OceanTexture.cpp  OceanTexture.h  OceanTexture_PC.cpp
game/graphics/general_renderer/renderer_utils/: Buffer.cpp  Buffer.h  GeneralRenderer.cpp  GeneralRenderer.h  RenderOptions.h
game/graphics/general_renderer/sprite/: GlowRenderer.cpp  GlowRenderer.h  Sprite3.cpp  Sprite3.h  Sprite3_Distort.cpp  Sprite3_Glow.cpp  SpriteRenderer.cpp  SpriteRenderer.h  sprite_common.h
game/graphics/opengl_renderer/: BlitDisplays.h  BucketRenderer.cpp  BucketRenderer.h  CollideMeshRenderer.cpp  DepthCue.cpp  DirectRenderer.cpp  EyeRenderer.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  Shader.h  Sprite3.cpp  Sprite3.h  SpriteRenderer.cpp  SpriteRenderer.h  TextureAnimator.cpp  TextureUploadHandler.cpp  TextureUploadHandler.h
game/graphics/opengl_renderer/background/: Shrub.cpp  TFragment.cpp  Tfrag3.cpp  Tie3.cpp  Tie3.h  background_common.cpp  background_common.h
game/graphics/opengl_renderer/foreground/: Generic2.cpp  Generic2_OpenGL.cpp  Merc2.cpp
game/graphics/opengl_renderer/loader/: Loader.cpp  Loader.h  LoaderStages.cpp  common.h
game/graphics/opengl_renderer/ocean/: CommonOceanRenderer.cpp  OceanMidAndFar.cpp  OceanNear.cpp
game/graphics/opengl_renderer/shaders/: collision.vert  shrub.vert  sprite3_3d.vert  sprite_3d.vert  tfrag3.vert  tfrag3_no_tex.vert
game/graphics/opengl_renderer/sprite/: GlowRenderer.h  Sprite3.cpp  Sprite3.h  Sprite3_Distort.cpp  SpriteRenderer.h
game/graphics/pipelines/: opengl.cpp  opengl.h  pipeline_common.h  vulkan.cpp  vulkan.h  vulkan_pipeline.cpp  vulkan_pipeline.h
game/graphics/texture/: TextureID.h  TexturePool.cpp  TexturePool.h  TexturePoolCommon.cpp  TexturePoolDataTypes.h  TexturePoolOpenGL.cpp  TexturePoolOpenGL.h  TexturePoolVulkan.cpp  TexturePoolVulkan.h  VulkanTexturePool.cpp  VulkanTexturePool.h
game/graphics/vulkan_renderer/: BlitDisplays.cpp  BlitDisplays.h  BucketRenderer.cpp  BucketRenderer.h  CollideMeshRenderer.cpp  CollideMeshRenderer.h  DepthCue.cpp  DepthCue.h  DirectRenderer.cpp  DirectRenderer.h  DirectRenderer2.cpp  DirectRenderer2.h  EyeRenderer.cpp  EyeRenderer.h  FramebufferHelper.cpp  FramebufferHelper.h  FullScreenDraw.cpp  FullScreenDraw.h  LightningRenderer.cpp  LightningRenderer.h  Profiler.h  ProgressRenderer.cpp  ProgressRenderer.h  Shader.cpp  Shader.h  ShadowRenderer.cpp  ShadowRenderer.h  Shadow_PS2.cpp  SkyBlendCPU.cpp  SkyBlendCPU.h  SkyBlendGPU.cpp  SkyBlendGPU.h  SkyRenderer.cpp  SkyRenderer.h  Sprite3.cpp  Sprite3.h  SpriteCommon.h  SpriteRenderer.cpp  SpriteRenderer.h  TextureAnimator.cpp  (+14 more)
game/graphics/vulkan_renderer/background/: Shrub.cpp  Shrub.h  TFragment.cpp  TFragment.h  Tfrag3.cpp  Tfrag3.h  Tie3.cpp  Tie3.h  background_common.cpp  background_common.h
game/graphics/vulkan_renderer/foreground/: Generic2.cpp  Generic2.h  Generic2BucketRenderer.cpp  Generic2BucketRenderer.h  Generic2_DMA.cpp  Generic2_Vulkan.cpp  Merc2.cpp  Merc2.h  Merc2BucketRenderer.cpp  Merc2BucketRenderer.h  Shadow2.cpp  Shadow2.h
game/graphics/vulkan_renderer/loader/: Loader.cpp  Loader.h  LoaderStages.cpp  LoaderStages.h  common.h
game/graphics/vulkan_renderer/ocean/: CommonOceanRenderer.cpp  CommonOceanRenderer.h  OceanMid.cpp  OceanMid.h  OceanMidAndFar.cpp  OceanMidAndFar.h  OceanNear.cpp  OceanNear.h  OceanTexture.cpp  OceanTexture.h  OceanTexture_PC.cpp
game/graphics/vulkan_renderer/shaders/: collision.frag  collision.frag.spv  collision.vert  collision.vert.spv  debug_red.vert  debug_red.vert.spv  depth_cue.frag  depth_cue.frag.spv  depth_cue.vert  depth_cue.vert.spv  direct2.frag  direct2.frag.spv  direct2.vert  direct2.vert.spv  direct_basic.frag  direct_basic.frag.spv  direct_basic.vert  direct_basic.vert.spv  direct_basic_textured.frag  direct_basic_textured.frag.spv  direct_basic_textured.vert  emerc.frag  (+102 more)
game/kernel/common/: klink.h  kmachine.cpp  memory_layout.h
game/kernel/jak1/: kmachine.cpp
game/kernel/jak2/: kdgo.cpp  kmachine.cpp  kscheme.cpp
game/kernel/jak3/: fileio.cpp  fileio.h  kboot.cpp  kboot.h  kdgo.cpp  kdgo.h  klink.cpp  klink.h  klisten.cpp  klisten.h  kmachine.cpp  kmachine.h  kmalloc.cpp  kmalloc.h  kprint.cpp  kscheme.cpp  kscheme.h  ksound.cpp
game/mips2c/: mips2c_private.h
game/mips2c/jak2_functions/: merc_blend_shape.cpp
game/system/: newpad.cpp  newpad.h
(+52 files in other folders)
